feat(WavHeader): swap from struct to class and print directly into terminal information

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ include_directories(include)
 set(SOURCES
     src/main.cpp
     src/WavParser.cpp
+        include/WavHeader.hpp
 )
 
 add_executable(dissonance.pre-alpha ${SOURCES})
